Fixed column spacing and added text form area

--- a/assets/style.css
+++ b/assets/style.css
@@ -36,6 +36,12 @@ textarea{
   border-top: 1px solid white;;
 }
 
+.row {
+  white-space: pre-wrap;
+  height: 80px;
+  border-top: 1px solid white;;
+}
+
 .hour {
   background-color: #ffffff;
   color: #000000;
@@ -44,17 +50,17 @@ textarea{
 
 .past {
   background-color: #d3d3d3;
-  color: white;
+  color: rgb(38, 38, 38);
 }
 
 .present {
   background-color: #ff6961;
-  color: white;
+  color: rgb(38, 38, 38);
 }
 
 .future {
   background-color: #77dd77;
-  color: white;
+  color: rgb(38, 38, 38);
 }
 
 .saveBtn {
